# quassimodo

./: .gitattributes  .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  Doxyfile  KNOWN-BUGS.md  Makefile  ONBOARDING.md  README.md  devbox.json  flake.nix
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
AgenteWrapper/: Agente.cpp  AyudanteDeAgente.cpp  Barrera.cpp  Celda.cpp  Excepciones.cpp  Jugada.cpp  Makefile  Pieza.cpp  Tablero.cpp  agente.py  container_conversions.cpp  container_conversions.h  main.cpp  pureba.py
Ejecutable/: Makefile  Partida.cpp  main.cpp
Grafico/: Antorcha.cpp  Antorcha.hpp  Barrera.cpp  Barrera.hpp  Celda.cpp  Celda.hpp  Constantes.hpp  EventReceiver.cpp  EventReceiver.hpp  Jugador.cpp  Jugador.hpp  Pieza.cpp  Pieza.hpp  Tablero.cpp  Tablero.hpp
PruebaGrafico/: AnimacionEnd.cpp  AnimacionEnd.hpp  Aplicacion.cpp  Aplicacion.hpp  EventReceiver.hpp  GUI.cpp  GUI.hpp  Menu.hpp  Partida.cpp  Partida.hpp  main.cpp
Pruebas/: Makefile  Player.cpp  Player.hpp  main.cpp
Reglas/: Agente.hpp  AyudanteDeAgente.cpp  AyudanteDeAgente.hpp  Barrera.cpp  Barrera.hpp  Celda.cpp  Celda.hpp  Enums.hpp  Excepciones.cpp  Excepciones.hpp  Grafo.cpp  Grafo.hpp  Juez.cpp  Juez.hpp  Jugada.cpp  Jugada.hpp  Jugador.cpp  Jugador.hpp  Partida.cpp  Partida.hpp  Pieza.cpp  (+3 more)
spikes/: CMakeLists.txt  hello.cpp
spikes/d2_render/: CMakeLists.txt  main.cpp  scene_builder.cpp  scene_builder.hpp
spikes/engine/: main.cpp
spikes/pybind/: CMakeLists.txt  agent.py  bindings.cpp  domain.cpp  domain.hpp  main.cpp
spikes/pyembed/: agent.py  main.cpp  module.cpp  widget.cpp  widget.hpp
src/: CMakeLists.txt
src/AgenteWrapper/: Agente.cpp  AyudanteDeAgente.cpp  Barrera.cpp  CMakeLists.txt  Celda.cpp  Enums.cpp  Excepciones.cpp  Jugada.cpp  Makefile  Pieza.cpp  Tablero.cpp  container_conversions.cpp  container_conversions.h  main.cpp  opaque_types.h
src/Agentes/: AgenteAstar.cpp  AgenteAstar.hpp  AgenteCaminaAdelante.cpp  AgenteCaminaAdelante.hpp  AgenteHumano.cpp  AgenteHumano.hpp  AgenteMinimax2.cpp  AgenteMinimax2.hpp  AgenteMinimax4.cpp  AgenteMinimax4.hpp  FabricaAgente.hpp  Makefile  ManejadorAgentes.cpp  ManejadorAgentes.hpp
src/Agentes/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/Aplicacion/: AgenteThreads.cpp  AgenteThreads.hpp  Aplicacion.cpp  Aplicacion.hpp  CMakeLists.txt  EventReceiver.cpp  EventReceiver.hpp  EventoJugada.hpp  ManejadorJuego.cpp  ManejadorJuego.hpp  ManejadorOpciones.cpp  ManejadorOpciones.hpp  Partida.cpp  Partida.hpp  PartidaConsola.cpp  PartidaConsola.hpp  PartidaGrafica.cpp  PartidaGrafica.hpp  aplicacion_main.cpp  main.cpp
src/Aplicacion/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/Consola/: CMakeLists.txt  Partida.cpp  main.cpp
src/Ejecutable/: Makefile  Partida.hpp  main.cpp
src/Ejecutable/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/Grafico/: Animaciones.cpp  Animaciones.hpp  Animador.cpp  Animador.hpp  Antorcha.cpp  Antorcha.hpp  Barrera.cpp  Barrera.hpp  CConfigMap.cpp  CConfigMap.h  CImageGUISkin.cpp  CImageGUISkin.h  CMakeLists.txt  CamaraController.cpp  CamaraController.hpp  Celda.cpp  Celda.hpp  Enums.hpp  Exepciones.cpp  Exepciones.hpp  GUI.cpp  GUI.hpp  IAnimatorCameraTokayo.hpp  Jugador.cpp  Jugador.hpp  JumpAnimator.cpp  JumpAnimator.hpp  Makefile  ManejadorGUI.cpp  ManejadorGUI.hpp  Menu.cpp  Menu.hpp  Pieza.cpp  Pieza.hpp  Skin.cpp  Skin.hpp  Tablero.cpp  Tablero.hpp  Video.cpp  Video.hpp  (+3 more)
src/Grafico/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/Opciones/: CMakeLists.txt  Makefile  ManejadorOpciones.cpp  ManejadorOpciones.hpp
src/Opciones/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/PruebaGrafico/: AnimacionEnd.cpp  AnimacionEnd.hpp  Aplicacion.cpp  Aplicacion.hpp  Enums.hpp  EventReceiver.cpp  EventReceiver.hpp  GUI.cpp  GUI.hpp  IAnimatorCameraTokayo.hpp  Juego.cpp  Juego.hpp  Makefile  ManejadorGUI.cpp  ManejadorGUI.hpp  ManejadorJuego.cpp  ManejadorJuego.hpp  Menu.cpp  Menu.hpp  Partida.cpp  Partida.hpp  PartidaConsola.cpp  PartidaConsola.hpp  PartidaGrafica.cpp  PartidaGrafica.hpp  ThreadAgente.cpp  ThreadAgente.hpp  ThreadGrafico.cpp  ThreadGrafico.hpp  Video.cpp  Video.hpp  main.cpp  tokayoCamera.cpp  tokayoCamera.hpp
src/PruebaGrafico/Texturas/: Barrera2.3ds  Mono.3ds  Mono3.3ds  MonoBlanco.3ds  MonoBlanco3.3ds  MonoSombra.3ds  Peon1.3ds
src/PruebaGrafico/Texturas/.fr-5vSdVp/3DS/: Barrera.3ds  Tablero.3ds
src/PruebaGrafico/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/Reglas/: Agente.hpp  Astar.cpp  Astar.hpp  AyudanteDeAgente.cpp  AyudanteDeAgente.hpp  Barrera.cpp  Barrera.hpp  CMakeLists.txt  Celda.cpp  Celda.hpp  Excepciones.cpp  Grafo.cpp  Juez.cpp  Jugada.cpp  Jugada.hpp  Jugador.cpp  Jugador.hpp  Makefile  Minimax.cpp  Minimax.hpp  Pieza.cpp  Pieza.hpp  Tablero.cpp  Tablero.hpp  micropather.h
src/Reglas/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/Scripting/: AgentePythonWrapper.cpp  AgentePythonWrapper.hpp  CMakeLists.txt  Interprete.hpp  InterpretePython.cpp  InterpretePython.hpp  Makefile  Manejador.hpp  Modulo.hpp  ModuloPython.cpp  ModuloPython.hpp  UtilsPython.cpp  UtilsPython.hpp
src/Scripting/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
(+116 files in other folders)
