file(GLOB APLICACION_SRC CONFIGURE_DEPENDS "*.cpp")
add_executable(aplicacion ${APLICACION_SRC})
target_include_directories(aplicacion PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(aplicacion PRIVATE Grafico Reglas Scripting Opciones IrrlichtMt::IrrlichtMt)
if(APPLE)
  target_link_libraries(aplicacion PRIVATE "-framework Cocoa" "-framework OpenGL" "-framework IOKit")
endif()
