file(GLOB GRAFICO_SRC CONFIGURE_DEPENDS "*.cpp")
add_library(Grafico SHARED ${GRAFICO_SRC})
target_include_directories(Grafico PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(Grafico PUBLIC Reglas Opciones IrrlichtMt::IrrlichtMt)
if(APPLE)
  target_link_libraries(Grafico PRIVATE "-framework Cocoa" "-framework OpenGL" "-framework IOKit")
endif()
